pm-200 - tooltipclipped fix

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -76,7 +76,7 @@ body.gen-ai #search-main .genai-search-container .default-content-wrapper {
 
 .header-search {
   position: fixed;
-  right: 1rem;
+  right: 1.5rem;
   bottom: 6rem;
   display: flex;
   flex-direction: column;
@@ -86,7 +86,7 @@ body.gen-ai #search-main .genai-search-container .default-content-wrapper {
 }
 
 .header-search.scrolled {
-  right: 2px; 
+  right: 1.5rem; 
 }
 
 .header-search.hide {
